# TinyKV

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  smoke_test.sh
config/: clusters.txt
protos/: tinykv.proto
scripts/: benchmark.sh  resilience_test.sh  smoke_test.sh
src/: CMakeLists.txt  Client.cpp  Utils.cpp  Utils.h  main.cpp
src/client/: Client.cpp  Client.h  main.cpp
src/server/: HashRing.cpp  HashRing.h  Server.cpp  Server.h
